--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,94 @@
   padding: 0;
 }
 
+.flex{
+  display: flex;
+}
+
+/* nav superiore */
+.nav_superiore{
+  width: 100%;
+  height: 100px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background-color: #e5e5e5;;
+}
+/* nav up */
+.ctn_logo{
+  justify-content: flex-start;
+}
+
+.ctn_logo .logo{
+  width: 200px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+}
+/* logo */
+.ctn_logo .logo img{
+  display:block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  width: 50%;
+}
+/* privacy */
+
+.ctn_logo .logo span{
+  color: #717479;
+  font-size: 25px;
+}
+
+/* nav bottom */
+.ctn_nav_bottom{
+  width:100%;
+  justify-content: space-between;
+
+}
+
+.ctn_nav_bottom div {
+  height: 50px;
+  line-height: 50px;
+}
+
+.nav_right{
+  width: 55%;
+}
+/* lista info */
+.nav_right li{
+  display: inline;
+  text-align: left;
+  padding-left: 50px;
+  color: #717479;
+}
+
+.nav_left {
+ width: 20%;
+ color: #717479;
+ text-align: center;
+}
+
+/* nav bottom */
+
+/*/ nav superiore */
+
+
+/* wrap delle FAQ */
 .wrap_question{
   width: 1200px;
-  margin: auto;
+  margin: 200px auto 100px;
+}
+/* titoli wrap */
+.wrap_question h3{
+  color: #3c4043;
+  font-size: 30px;
+  margin-top: 50px;
+  margin-bottom: 10px;
+}
+
+/* paragrafi wrap */
+.wrap_question p{
+  line-height: 30px;
 }
